Add bootstrap gem and generate assets, apply to application html file [finishes #84827700]

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Meetingsurvey</title>
+  <title>Meeting Survey</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<p class="notice"><%= notice %></p>
-<p class="alert"><%= alert %></p>
-<%= yield %>
+<div class="container">
+
+  <% if alert.present?  %><div class="alert alert-danger"><%= alert %></div><% end %>
+  <% if notice.present?  %><div class="alert alert-success"><%= notice %></div><% end %>
+  <% if devise_controller? && resource.errors.present?  %><div class="alert alert-danger"><%= devise_error_messages! %></div><% end %>
+
+  <%= yield %>
+
+</div>
 
 </body>
 </html>
