Starting to add new UI for survey [#88345874]

--- a/app/assets/stylesheets/survey.css.scss
+++ b/app/assets/stylesheets/survey.css.scss
@@ -1,3 +1,18 @@
 // Place all the styles related to the Survey controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+//.question {
+//  input[type="radio"] {
+////    display: none;
+//  }
+//
+//  label.btn {
+//    width: 50px;
+//    height: 50px;
+//    margin-right: 10px;
+//    i {
+//      padding-top: 10px;
+//    }
+//  }
+//}
