--- a/app/assets/stylesheets/survey.css.scss
+++ b/app/assets/stylesheets/survey.css.scss
@@ -1,18 +1,50 @@
-// Place all the styles related to the Survey controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+.question {
+  h3 {
+    color: #8C8C8C;
+  }
 
-//.question {
-//  input[type="radio"] {
-////    display: none;
+  input[type="radio"] {
+    display: none;
+  }
+
+//  input[type="radio"]:checked + i {
+////    background-color: yellow;
+////    color: yellow;
 //  }
-//
-//  label.btn {
-//    width: 50px;
-//    height: 50px;
-//    margin-right: 10px;
-//    i {
-//      padding-top: 10px;
-//    }
-//  }
-//}
+
+  .buttons {
+    margin-top: 60px;
+  }
+
+  .btn-yes.active {
+    background-color: #00BA59;
+  }
+
+  .btn-no.active {
+    background-color: #FF4449;
+  }
+
+  .btn-continue {
+    color: #333333;
+    margin-top: 40px;
+  }
+
+
+  .why {
+    margin-top: 20px;
+    width: 300px;
+    border: 0;
+    border-radius: 0;
+    -webkit-border-radius: 0;
+    border-left: 2px solid #4fb0ae!important;
+    resize: none;
+    font-size: 24px;
+    line-height: 30px;
+    display: none;
+  }
+
+  .hotkey {
+    font-size: 11px;
+    color: #8D8D8D;
+  }
+}
