--- a/app/views/survey/show.html.slim
+++ b/app/views/survey/show.html.slim
@@ -1,4 +1,4 @@
-.row
+.row.survey
   .col-md-8.col-md-offset-2
     h3 Welcome
     table
@@ -12,9 +12,67 @@
         td Organizer:
         td = @meeting.organizer.email
 
-    = form_tag('/survey') do
+    = form_tag('/survey', class: 'form-questions') do
       = hidden_field_tag :link_code, params[:link_code]
       - @questions.each_with_index do |question, i|
         = survey_tag(question[:question], question[:type], i + 1)
 
-      = submit_tag 'Send'
+      = submit_tag 'Send', id: "submit-button"
+
+javascript:
+  function set_why_color(label) {
+
+    var why = label.closest(".question").find(".why");
+    var continue_button = label.closest('.question').find('.button-block');
+    why.show();
+    continue_button.show();
+
+    if (label.hasClass('btn-yes')) {
+      why.addClass('yes');
+      why.removeClass('no');
+    } else {
+      why.addClass('no');
+      why.removeClass('yes');
+    }
+    why.focus();
+  }
+
+  function next_question_block() {
+    var seen_visible_block = false;
+
+    var list = $('.question');
+    for(var i = 0; i < list.length; ++i) {
+      var block = $(list[i]);
+
+      if(block.is(':visible')) {
+        seen_visible_block = true;
+      } else if(seen_visible_block) {
+        return (block);
+      }
+    }
+  }
+
+  $('.question input[type="radio"]').change(function () {
+    var radio = $(this);
+    $.each(radio.parents('.question').find('label'), function (i, v) {
+      var label = $(v);
+      if (label.children('input[type="radio"]:checked').length) {
+        label.addClass('active');
+        set_why_color(label);
+      } else {
+        label.removeClass('active');
+      }
+    });
+  });
+
+  $('.btn-continue').click(function(e){
+    var this_block = $(this).parent().parent();
+    var next_block = next_question_block();
+    this_block.hide();
+    next_block.show();
+  });
+
+  $(function () {
+    $('#question_1').show();
+  });
+
