--- a/app/views/survey/show.html.slim
+++ b/app/views/survey/show.html.slim
@@ -1,18 +1,12 @@
 .row.survey
   .col-md-8.col-md-offset-2
-    h3 Welcome
-    table
-      tr
-        td Summary:
-        td = @meeting.summary
-      tr
-        td Description:
-        td = @meeting.description
-      tr
-        td Organizer:
-        td = @meeting.organizer.email
+    div.welcome
+      h4 #{@meeting.summary}
+      p hosted by #{@meeting.organizer.email} #{time_ago_in_words @survey_invite.meeting_occurrence.start_time} ago.
+    div.progress
+     div.progress-bar role="progressbar" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100" style="width: 20%;" 1 / 6
 
-    = form_tag('/survey', class: 'form-questions') do
+    = form_tag('/survey', class: 'form-questions', id: 'survey-form') do
       = hidden_field_tag :link_code, params[:link_code]
       - @questions.each_with_index do |question, i|
         = survey_tag(question[:question], question[:type], i + 1)
@@ -24,8 +18,9 @@ javascript:
 
     var why = label.closest(".question").find(".why");
     var continue_button = label.closest('.question').find('.button-block');
-    why.show();
-    continue_button.show();
+    why.slideDown(100, 'linear', function() {
+      continue_button.show();
+    });
 
     if (label.hasClass('btn-yes')) {
       why.addClass('yes');
@@ -53,17 +48,29 @@ javascript:
   }
 
   function set_active_question(change_to_block) {
-    var list = $('.question');
-    $.each(list, function(index, this_block) {
-      $(this_block).removeClass('on');
-    });
+    if(typeof change_to_block != 'undefined') {
+      var list = $('.question');
+      $.each(list, function (index, this_block) {
+        $(this_block).removeClass('on');
+      });
 
-    change_to_block.addClass('on');
+      change_to_block.addClass('on');
+      if ($('.on .general-feedback').length > 0) {
+        $('.on .general-feedback').focus();
+        $('.on .general-feedback').val('');
+      }
 
+      updateProgressBar(parseInt(change_to_block.attr('id').split('_')[1]));
+    }
+  }
+
+  function updateProgressBar(step) {
+    var percentage = parseInt(100 * (step / 6))
+    $('.progress-bar').width(percentage+'%').attr('aria-valuenow', percentage).text(step+' / 6');
   }
 
   function keyboard_answer(key) {
-    if($('.on .buttons').length == 1 && $('.on .why').is(':focus') == false) {
+    if($('.on .buttons').length == 1 && $('.on textarea').is(':focus') == false) {
       if(key == 'y') {
         $($('.on .buttons input:radio')[0]).trigger('click');
       } else if(key == 'n') {
@@ -92,12 +99,25 @@ javascript:
 
   $('.why').keydown(function (e) {
     if (e.shiftKey && e.keyCode == 13) {
+      e.preventDefault();
       $('.on .btn-continue').trigger('click');
     }
   });
 
+  $('.general-feedback').keydown(function (e) {
+    if (e.shiftKey && e.keyCode == 13) {
+      e.preventDefault();
+      $('#submit').trigger('click');
+    }
+  });
+
+  $('#submit').click(function(e){
+    $('#survey-form').submit();
+  });
+
   $(document).keyup(function (e) {
     if (e.shiftKey && e.keyCode == 13) {
+      e.preventDefault();
       keyboard_answer('enter');
     } else if (e.keyCode == 121 || e.keyCode == 89) {
       keyboard_answer('y');
@@ -107,6 +127,6 @@ javascript:
   });
 
   $(function () {
+    $('textarea').autosize();
     $('#question_1').addClass('on');
   });
-
