--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+<meta name="google-site-verification" content="Zumry8JPPFYD2_kY93TNaPQ8mq5qUZ8CvuB6Qy3P0bQ" />
 <head>
   <title>Meeting Survey</title>
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
