Create thank you pages with cute possum pictures [finishes #89038118]

--- a/app/assets/stylesheets/survey.css.scss
+++ b/app/assets/stylesheets/survey.css.scss
@@ -110,3 +110,10 @@
     margin-right: auto;
   }
 }
+.survey-finished {
+  text-align: center;
+  img {
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
