--- a/app/views/survey/show.html.slim
+++ b/app/views/survey/show.html.slim
@@ -79,54 +79,56 @@ javascript:
     }
   };
 
-  $('.question input[type="radio"]').change(function () {
-    var radio = $(this);
-    $.each(radio.parents('.question').find('label'), function (i, v) {
-      var label = $(v);
-      if (label.children('input[type="radio"]:checked').length) {
-        label.addClass('active');
-        set_why_color(label);
-        $('.on .text-input-legend').hide();
-      } else {
-        label.removeClass('active');
+  $(document).ready(function () {
+    $('.question input[type="radio"]').change(function () {
+      var radio = $(this);
+      $.each(radio.parents('.question').find('label'), function (i, v) {
+        var label = $(v);
+        if (label.children('input[type="radio"]:checked').length) {
+          label.addClass('active');
+          set_why_color(label);
+          $('.on .text-input-legend').hide();
+        } else {
+          label.removeClass('active');
+        }
+      });
+    });
+
+    $('.btn-continue').click(function (e) {
+      set_active_question(next_question_block());
+    });
+
+    $('.why').keydown(function (e) {
+      if (e.shiftKey && e.keyCode == 13) {
+        e.preventDefault();
+        $('.on .btn-continue').trigger('click');
       }
     });
-  });
 
-  $('.btn-continue').click(function(e){
-    set_active_question(next_question_block());
-  });
+    $('.general-feedback').keydown(function (e) {
+      if (e.shiftKey && e.keyCode == 13) {
+        e.preventDefault();
+        $('#submit').trigger('click');
+      }
+    });
 
-  $('.why').keydown(function (e) {
-    if (e.shiftKey && e.keyCode == 13) {
-      e.preventDefault();
-      $('.on .btn-continue').trigger('click');
-    }
-  });
+    $('#submit').click(function (e) {
+      $('#survey-form').submit();
+    });
 
-  $('.general-feedback').keydown(function (e) {
-    if (e.shiftKey && e.keyCode == 13) {
-      e.preventDefault();
-      $('#submit').trigger('click');
-    }
-  });
+    $(document).keyup(function (e) {
+      if (e.shiftKey && e.keyCode == 13) {
+        e.preventDefault();
+        keyboard_answer('enter');
+      } else if (e.keyCode == 121 || e.keyCode == 89) {
+        keyboard_answer('y');
+      } else if (e.keyCode == 110 || e.keyCode == 78) {
+        keyboard_answer('n');
+      }
+    });
 
-  $('#submit').click(function(e){
-    $('#survey-form').submit();
-  });
-
-  $(document).keyup(function (e) {
-    if (e.shiftKey && e.keyCode == 13) {
-      e.preventDefault();
-      keyboard_answer('enter');
-    } else if (e.keyCode == 121 || e.keyCode == 89) {
-      keyboard_answer('y');
-    } else if (e.keyCode == 110 || e.keyCode == 78) {
-      keyboard_answer('n');
-    }
-  });
-
-  $(function () {
-    $('textarea').autosize();
-    $('#question_1').addClass('on');
+    $(function () {
+      $('textarea').autosize();
+      $('#question_1').addClass('on');
+    });
   });
